--- a/skinfo.html
+++ b/skinfo.html
@@ -316,13 +316,14 @@
                 <ul>
                     <li><h4>Menu</h4></li>
                     <li><a href="about.html" data-replace="About"><span>About</span></a></li>
-                    <li><a href="index.html" data-replace="Work"><span>Work</span></a></li>
+                    <li><a href="uiux.html" data-replace="UI/UX"><span>UI/UX Design</span></a></li>
+                    <li><a href="webdesign.html" data-replace="Web Design"><span>Web Experiences</span></a></li>
                     <li><a href="explorations.html" data-replace="Explorations"><span>Explorations</span></a></li>
                 </ul>
                 <ul>
                     <li><h4>Contact</h4></li>
                     <li><a href="mailto:&#122;&#104;&#117;&#111;&#101;&#110;&#106;&#111;&#097;&#110;&#110;&#101;&#099;&#097;&#105;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">&#122;&#104;&#117;&#111;&#101;&#110;&#106;&#111;&#097;&#110;&#110;&#101;&#099;&#097;&#105;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</a></li>
-                    <li><a href="www.linkedin.com/in/zhuoen-joanne-cai">LinkedIn</a></li>
+                    <li><a href="https://www.linkedin.com/in/zhuoen-joanne-cai/">LinkedIn</a></li>
                 </ul>
             </div>
         </div>
