--- a/214.html
+++ b/214.html
@@ -25,7 +25,7 @@
     <!-- My Script -->
     <script src="script.js" defer></script>
 </head>
-<body>
+<body class="project-body">
     <header>
         <a href="index.html"><img id="logo" src="images/logo.svg" alt="logo"></a>
         <nav>
@@ -45,11 +45,14 @@
     </header>
 
     <main class="explorations-main">
-        <h2>Dog or Cat?</h2>
-        <p class="description">Interactive animation coded using Java in Processing.</p>
-        <img src="images/dog.gif" alt="gif of the project if the user chooses 'dog'">
-        <img src="images/cat.gif" alt="gif of the project if the user chooses 'cat'">
+        <h2>2/14</h2>
+        <p class="description">A series of animations for Valentine's Day coded with Java in Processing.</p>
+        <div class="explorations-img">
+            <img src="images/heart_filler.gif" alt="gif of the heart filler animation">
+            <img src="images/heartbeat.gif" alt="gif of the heartbeat animation">
+            <img src="images/winking_bear.gif" alt="gif of the winking bear animation">
 
+        </div>
     </main>
     
     <footer>
@@ -71,7 +74,7 @@
             </div>
         </div>
         <div>
-            <p>© 2025 Joanne Cai · Designed & Built by Joanne Cai</p>
+            <p>© 2026 Joanne Cai · Designed & Built by Joanne Cai</p>
         </div>
     </footer>
     
