--- a/canvas.html
+++ b/canvas.html
@@ -25,7 +25,7 @@
     <!-- My Script -->
     <script src="script.js" defer></script>
 </head>
-<body>
+<body class="casestudy-body">
     <header>
         <a href="index.html"><img id="logo" src="images/logo.svg" alt="logo"></a>
         <nav>
@@ -86,7 +86,7 @@
                     <h2>Introduction</h2>
                     <p>Canvas is a core academic platform used daily by college students to manage coursework, deadlines, and schedules. However, despite its importance, many students find certain features—particularly the To-Do list and Calendar—difficult to use and poorly organized.</p>
 
-                    <p>With two other designers in a three-week UI/UX design sprint for Design Interactive at UC Davis, I explored how the Canvas mobile app could better support students’ task and time management needs through clearer organization and more intuitive interactions.</p>
+                    <p>With two other designers in a 3-week UI/UX design sprint for Design Interactive at UC Davis, I explored how the Canvas mobile app could better support students’ task and time management needs through clearer organization and more intuitive interactions.</p>
 
                     <p>The Challenge: How might we improve the organization and usability of Canvas’s To-Do list and Calendar to better support students’ academic planning?</p>
                 </section>
@@ -169,7 +169,7 @@
                 </section>
 
                 <section id="next">
-                    <h2>Next Step</h2>
+                    <h2>Next Steps</h2>
                     <p>Given the limited three-week timeframe, our redesign focused primarily on the To-Do list and Calendar. Future work could expand these improvements to Canvas’s web interface, ensuring consistency and usability across platforms. Additionally, we would explore redesigning other features, such as notifications, assignment submission pages, and dashboard elements, to further enhance task management and overall user experience. Long-term testing of the redesigned features could also provide insights into how students customize calendars and interact with tasks over time, informing further refinements.</p>
                 </section>
 
@@ -203,7 +203,7 @@
             </div>
         </div>
         <div>
-            <p>© 2025 Joanne Cai · Designed & Built by Joanne Cai</p>
+            <p>© 2026 Joanne Cai · Designed & Built by Joanne Cai</p>
         </div>
     </footer>
     
