--- a/cargame.html
+++ b/cargame.html
@@ -25,7 +25,7 @@
     <!-- My Script -->
     <script src="script.js" defer></script>
 </head>
-<body>
+<body class="project-body">
     <header>
         <a href="index.html"><img id="logo" src="images/logo.svg" alt="logo"></a>
         <nav>
@@ -47,10 +47,13 @@
     <main class="explorations-main">
         <h2>Avoid the Obstacles!</h2>
         <p class="description">Interactive mini car game coded using Java in Processing.</p>
-        <video autoplay loop muted playsinline>
-            <source src="images/car_game.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
+        <div class="explorations-img">
+            <video autoplay loop muted playsinline>
+                <source src="images/car_game.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+        
 
 
     </main>
@@ -74,7 +77,7 @@
             </div>
         </div>
         <div>
-            <p>© 2025 Joanne Cai · Designed & Built by Joanne Cai</p>
+            <p>© 2026 Joanne Cai · Designed & Built by Joanne Cai</p>
         </div>
     </footer>
     
