--- a/dogandcake.html
+++ b/dogandcake.html
@@ -25,7 +25,7 @@
     <!-- My Script -->
     <script src="script.js" defer></script>
 </head>
-<body>
+<body class="project-body">
     <header>
         <a href="index.html"><img id="logo" src="images/logo.svg" alt="logo"></a>
         <nav>
@@ -44,22 +44,13 @@
         </div>
     </header>
 
-    <main>
-        <div id="intro-container">
-            <div id="about-img">
-                <img src="images/about.jpg" alt="picture of me and my dog">
-            </div>
-            <div id="intro-text">
-                <h1>A Little About Me...</h1>
-                <p>Hey! I’m Joanne. I'm a student majoring in Design at the University of California, Davis with a focus on UI/UX design.</p>
-                <p>I am fascinated by the intersection of design and human behavior. I believe that understanding how people feel and interact with technology is essential in creating meaningful user-centered designs that not only solve problems but also bring efficiency and engagement to my users.</p>
-                <p>When I am not designing, I enjoy crocheting and spending time with my Corgi, who is the inspiration for my logo, which is a blend of her little face with my initials!</p>
-            </div>
+    <main class="explorations-main">
+        <h2>Dog and Cake</h2>
+        <p class="description">Illustration exploring color combinations.</p>
+        <div class="explorations-img">
+            <img src="images/dogandcake.png" alt="illustration of Dog and Cake in different color combinations">
         </div>
         
-
-         <!-- experience -->
-          <!-- awards -->
 
     </main>
     
