--- a/explorations.html
+++ b/explorations.html
@@ -82,7 +82,7 @@
                 </a>
                 <div class="work-details">
                     <h3>Avoid the Obstacles!</h3>
-                    <h4>Interactive, Game, Animation</h4>
+                    <h4>Animation</h4>
                     <section class="cta">
                         <a href="cargame.html">
                             <span>View Project</span> <i class="fa-solid fa-arrow-right"></i>
@@ -92,7 +92,7 @@
             </div>
             <div class="work-section">
                 <a href="dogandcake.html">
-                    <img src="images/dogandcake.png" alt="thumbnail of the dog and cake illustration">
+                    <img src="images/dogandcake_cover.png" alt="thumbnail of the dog and cake illustration">
                 </a>
                 <div class="work-details">
                     <h3>Dog and Cake</h3>
@@ -215,7 +215,7 @@
             </div>
         </div>
         <div>
-            <p>© 2025 Joanne Cai · Designed & Built by Joanne Cai</p>
+            <p>© 2026 Joanne Cai · Designed & Built by Joanne Cai</p>
         </div>
     </footer>
     
