--- a/foodtown.html
+++ b/foodtown.html
@@ -25,7 +25,7 @@
     <!-- My Script -->
     <script src="script.js" defer></script>
 </head>
-<body>
+<body class="casestudy-body">
     <header>
         <a href="index.html"><img id="logo" src="images/logo.svg" alt="logo"></a>
         <nav>
@@ -124,7 +124,7 @@
 
                 <section id="midfi">
                     <h2>Mid-fi & Testing</h2>
-                    <p>I conducted two rounds of usability testing with 6 participants using a mid-fidelity prototype.</p>
+                    <p>I conducted two rounds of usability testing with six participants using a mid-fidelity prototype.</p>
                     <ul class="casestudy-ul"><span>Round 1 tasks included:</span>
                         <li>Creating a community</li>
                         <li>Searching for food</li>
@@ -135,12 +135,12 @@
                     </ul>
                     <h3>Key Findings & Iterations</h3>
                     <ul class="casestudy-ul"><span>Accessibility issues: During the first round, nearly all participants struggled to tap buttons accurately, indicating that many touch targets were too small. Participants consistently suggested enlarging buttons to improve usability.</span>
-                        <li>Iteration: Clickable icon and button sizes were increased before the second round.</li>
+                        <li>Iteration: Clickable icons and button sizes were increased before the second round.</li>
                         <li>Outcome: In the second round, participants experienced significantly fewer accessibility issues, with most able to complete tasks without misclicks.
                         </li>
                     </ul>
                     <ul class="casestudy-ul"><span>Search behavior and filter confusion: In the first round, most participants bypassed the filter feature and went directly to the search bar. Several users found the filter confusing and were unsure whether it needed to be applied before searching. One participant suggested making filters optional rather than mandatory.</span>
-                        <li>Iteration: I made filters optional, limited them to preferred distance, and reframed the search categories as “Suggestions” to function as quick-search options</li>
+                        <li>Iteration: I made filters optional, limited them to preferred distance, and reframed the search categories as “Suggestions” to function as quick-search options.</li>
                         <li>Outcome: In the second round, participants experienced significantly less confusion during the search task. However, some users did not immediately recognize the “Suggestions” tabs as quick-search options, indicating an opportunity for clearer visual cues.</li>
                     </ul>
                     <ul class="casestudy-ul"><span>Community creation discoverability: In the first round, participants struggled to locate the option to create a community. The prominent plus icon for creating posts drew attention away from the less visible “Add more…” label.</span>
@@ -193,7 +193,7 @@
             </div>
         </div>
         <div>
-            <p>© 2025 Joanne Cai · Designed & Built by Joanne Cai</p>
+            <p>© 2026 Joanne Cai · Designed & Built by Joanne Cai</p>
         </div>
     </footer>
     
