--- a/foreu.html
+++ b/foreu.html
@@ -25,7 +25,7 @@
     <!-- My Script -->
     <script src="script.js" defer></script>
 </head>
-<body>
+<body class="casestudy-body">
     <header>
         <a href="index.html"><img id="logo" src="images/logo.svg" alt="logo"></a>
         <nav>
@@ -85,7 +85,7 @@
 
                 <section id="introduction">
                     <h2>Introduction</h2>
-                    <p>Menstruation tracking apps often overwhelm users with excessive features, dense information, and social content that detracts from their primary purpose. During a three-week UI/UX design sprint in UC Davis Design Interactive, I worked with two other designers to address this issue.</p>
+                    <p>Menstruation tracking apps often overwhelm users with excessive features, dense information, and social content that detracts from their primary purpose. During a 3-week UI/UX design sprint in UC Davis Design Interactive, I worked with two other designers to address this issue.</p>
 
                     <p>ForeU is a minimalistic menstruation tracking app designed for college students who want a clear, visually soothing, and easy-to-use way to track and predict their menstrual cycle and symptoms.</p>
 
@@ -107,7 +107,7 @@
                     <h3>Key Research Data and Findings</h3>
                     <p>The survey revealed that participants most commonly tracked health-related habits such as menstruation cycles, exercise, and general wellness. When asked about improvements they wanted in a new app, users consistently emphasized fewer features, clearer visual elements, simpler interactions, and a clean, visually appealing design. Nearly half of respondents expressed a preference for apps that focus on tracking a single habit rather than serving as an all-in-one habit tracker, highlighting a desire for clarity and specificity.</p>
 
-                    <p>Our competitive analysis examined several existing apps, including Habit, Flo, and Clue, to identify usability issues and design gaps. The Habit app presented challenges due to its confusing layout and inconsistent iconography, such as multiple calendar views showing overlapping information and unclear gear icons that led to different destinations. Flo was frequently described as overwhelming because of excessive features, pop-up ads, and persistent upgrade prompts. Users reported that constant notifications increased anxiety and caused them to anticipate their period too often. While Clue was appreciated for its minimalistic aesthetic and core tracking functionality, users felt that navigation required too many steps for simple tasks and that added features over time reduced usability.</p>
+                    <p>Our competitive analysis examined several existing apps, including Habit, Flo, and Clue, to identify usability issues and design gaps. The Habit app presented challenges due to its confusing layout and inconsistent iconography, such as multiple calendar views showing overlapping information and unclear gear icons that led to different destinations. Flo was frequently described as overwhelming because of excessive features, pop-up ads, and persistent upgrade prompts. Users reported that constant notifications increased anxiety and caused them to anticipate their period too often. While Clue was appreciated for its minimal aesthetic and core tracking functionality, users felt that navigation required too many steps for simple tasks and that added features over time reduced usability.</p>
 
                     <p>User interviews reinforced these findings and provided deeper insight into emotional responses to health-tracking apps. Several participants explained that they chose menstruation-tracking apps primarily to manage irregular periods, valuing simplicity, ad-free experiences, and customizable reminders. Some users ultimately abandoned specialized apps in favor of basic tools like phone calendars or notes, which they found more efficient and less intrusive. Participants also shared that habit tracking, especially for health, can create pressure or feelings of failure when users forget to log information, suggesting that overly complex interfaces may reduce long-term engagement rather than support it. Additionally, concerns around data privacy and trust emerged, with users expressing discomfort about how personal health data might be used.</p>
 
@@ -116,7 +116,7 @@
                     <ul class="casestudy-ul"><span>From research synthesis, three core needs emerged:</span>
                         <li>Focus on essential tracking features</li>
                         <li>Clean, calming visual design</li>
-                        <li>Clear predictions and reminders (countdowns, calendars).</li>
+                        <li>Clear predictions and reminders (countdowns, calendars)</li>
                     </ul>
 
 
@@ -177,7 +177,7 @@
                     <h2>Final Designs</h2>
                     <p>The final design emphasizes clarity, consistency, and emotional ease.</p>
                     <ul class="casestudy-ul"><span>Key Features</span>
-                        <li>Login page: multiple ways to login via social media; if not, it is possible to sign up through email and password</li>
+                        <li>Login page: multiple sign-in options via social media; email and password sign-up also available</li>
                         <li>Homepage with weekly calendar, countdown, and quick logging</li>
                         <li>Categorized tips for sleep, pain, and symptoms</li>
                         <li>Calendar and insights for historical cycle data</li>
@@ -196,7 +196,7 @@
                 </section>
 
                 <section id="next">
-                    <h2>Next Step</h2>
+                    <h2>Next Steps</h2>
                     <p>If the project were continued, we would focus on enhancing engagement and long-term usability. One area of exploration would be animating the cycle countdown to create a more dynamic and engaging tracking experience. We would also introduce a friendly app mascot to foster a stronger emotional connection and make interactions feel more approachable. In addition, further usability testing would be conducted to evaluate long-term engagement patterns and refine notification preferences, ensuring reminders feel supportive rather than overwhelming.</p>
                 </section>
 
@@ -230,7 +230,7 @@
             </div>
         </div>
         <div>
-            <p>© 2025 Joanne Cai · Designed & Built by Joanne Cai</p>
+            <p>© 2026 Joanne Cai · Designed & Built by Joanne Cai</p>
         </div>
     </footer>
     
