--- a/skinfo.html
+++ b/skinfo.html
@@ -25,7 +25,7 @@
     <!-- My Script -->
     <script src="script.js" defer></script>
 </head>
-<body>
+<body class="casestudy-body">
     <header>
         <a href="index.html"><img id="logo" src="images/logo.svg" alt="logo"></a>
         <nav>
@@ -88,7 +88,7 @@
 
                 <section id="introduction">
                     <h2>Introduction</h2>
-                    <p>In today’s skincare market, people struggle to choose the right products and understand their skin’s unique needs. During Fall Quarter 2024, our design team tackled this challenge through an intensive six-week design sprint.</p>
+                    <p>In today’s skincare market, people struggle to choose the right products and understand their skin’s unique needs. During Fall Quarter 2024, our design team tackled this challenge through an intensive 6-week design sprint.</p>
                     <p>Our goal was to create a platform that helps people overcome common skincare obstacles, including difficulty identifying skin conditions, navigating conflicting information, and making budget-friendly choices. Skinfo emerged as our solution to these widespread challenges.</p>
                     <p>Using a thorough design process that included in-depth user research, iterative prototyping, and comprehensive testing, we developed a platform that does more than just recommend products. Skinfo is a user-friendly tool that provides personalized guidance, empowering people to make confident decisions about their skin health.</p>
                 </section>
@@ -103,7 +103,7 @@
                         <li>Compiled and documented preliminary findings to inform subsequent design phases</li>
                     </ul>
                     <ul class="casestudy-ul"><span>Synthesis and Ideation (Lead: Kylie Wong)</span>
-                        <li>Analyzed and synthesized user research data to extract critical pain points to extract critical pain points and key insights</li>
+                        <li>Analyzed and synthesized user research data to extract critical pain points and key insights</li>
                         <li>Created comprehensive affinity diagrams and user flows to visualize research findings</li>
                         <li>Developed detailed user personas to represent target user segments</li>
                         <li>Generated low-fidelity sketches for initial core feature concepts</li>
@@ -111,7 +111,7 @@
                     <ul class="casestudy-ul"><span>Mid-Fidelity Prototype and Usability Testing (Lead: Joanne Cai)</span>
                         <li>Translated lo-fi sketches and user flows into mid-fidelity wireframes and interaction flows</li>
                         <li>Designed a structured usability testing process</li>
-                        <li>Conducted iterative user testing sessions and A/B testings to receive design feedback</li>
+                        <li>Conducted iterative user testing sessions and A/B tests to receive design feedback</li>
                         <li>Documented and prioritized user feedback for design refinement in the hi-fidelity prototype</li>
                     </ul>
                     <ul class="casestudy-ul"><span>High-Fidelity Prototype (Lead: Brandon Wong)</span>
@@ -131,13 +131,13 @@
                     <p>Our core research goal centered on developing a solution that could effectively counteract social media misinformation, provide reliable and accessible skincare information, and support users in making informed, confident skincare decisions.</p>
 
                     <h3>Key Research Data and Findings</h3>
-                    <img src="images/data.jpg" alt="data of research findings">
+                    <img src="images/data.jpg" alt="research findings">
                     <p>Social media emerged as the primary source of skincare product information for most respondents, revealing how people are currently getting their skincare advice. Our research uncovered multiple challenges consumers encounter when purchasing skincare products, revealing a significant disconnect between available information and personalized skincare guidance. Some statistics are visible in the image provided.</p>
                     <p>Overall, most responses highlighted the demand for more personalized advice and consistent, reliable information about different     products and ingredients.</p>
 
                     <h3>Demographic Composition</h3>
                     <img src="images/persona.jpg" alt="persona">
-                    <p>Our research participants primarily represented young adult, female college students. We translated these demographics into a user persona, providing clarity and insight into the specific information needs and challenges of this key target user.</p>
+                    <p>Our research participants primarily represented young adult female college students. We translated these demographics into a user persona, providing clarity and insight into the specific information needs and challenges of this key target user.</p>
 
                     <h3>Research Limitations and Future Improvements</h3>
                     <p>Given additional time and resources, we would aim to expand our research methodology. This would mainly include incorporating participants from broader age groups and backgrounds, as we made the conscious decision to stick to a younger audience in the interest of our time constraints.</p>
@@ -147,7 +147,7 @@
                     <h2>Ideation</h2>
                     <h3>Sketches</h3>
                     <img src="images/sketch.jpg" alt="sketches">
-                    <p>Based on research findings, users are interested in understanding their skin type, discovering suitable products, accessing reliable information and building a personalized routine. To address these concerns, we created sketches of potential features such as a skin type quiz, color-coded ingredient breakdowns, filtered search, creating a routine, and community discussion forum. First, we finalized our decision to create an information, rather than commerce based platform in order to provide the most unbiased information to users. We refined our list of features to include an onboarding skin type quiz, ingredient breakdown, explore and search page, homepage with recommendations and creating a routine. We chose to exclude the community forum feature because we felt it might conflict with the app’s goal of delivering unbiased and reliable information. Additionally, community forums can be challenging to moderate effectively, creating a risk of spreading misinformation or allowing biased content to influence users.</p>
+                    <p>Based on research findings, users are interested in understanding their skin type, discovering suitable products, accessing reliable information and building a personalized routine. To address these concerns, we created sketches of potential features such as a skin type quiz, color-coded ingredient breakdowns, filtered search, creating a routine, and community discussion forum. First, we finalized our decision to create an information, rather than commerce-based platform in order to provide the most unbiased information to users. We refined our list of features to include an onboarding skin type quiz, ingredient breakdown, explore and search page, homepage with recommendations and creating a routine. We chose to exclude the community forum feature because we felt it might conflict with the app’s goal of delivering unbiased and reliable information. Additionally, community forums can be challenging to moderate effectively, creating a risk of spreading misinformation or allowing biased content to influence users.</p>
 
                     <h3>User Flow</h3>
                     <img src="images/flow.jpg" alt="user flow">
@@ -156,29 +156,29 @@
                     <p>The first is <strong>onboarding</strong>, beginning with a skin type quiz, providing information for product rankings and recommendations which will be listed on the user <strong>homepage</strong>. The product <strong>explore</strong> feature helps users find new products based on their skin concerns and ingredient compatibility. Routines allows users to create a personalized skincare routine, receive feedback on product interactions, and access simplified ingredient information. Lastly, the <strong>profile</strong> allows users to manage their skincare routines, save favorite products, and monitor their skin type and condition.</p>
 
                     <h3>Problem Statement</h3>
-                    <p class="hmw">"How might we help users understand their own skin and make well-informed purchase decisions?"</p>
+                    <p class="hmw">How might we help users understand their own skin and make well-informed purchase decisions?</p>
                 </section>
 
                 <section id="midfi">
                     <h2>Mid-fi & Testing</h2>
                     <p>After the ideation stage, we incorporated our sketches and user flow into wireframes. We made two main iterations during the mid-fidelity stage, by incorporating usability testing feedback after each iteration.</p>
                     <ul class="casestudy-ul"><span>Main Features</span>
-                        <li>We created an onboarding quiz to collect data from user’s distinct skin type for personalized and recommendation features.</li>
+                        <li>We created an onboarding quiz to collect data from users' distinct skin type for personalized and recommendation features.</li>
                     </ul>
 
                     <ul class="casestudy-ul"><span>Homepage</span>
-                        <li>By going back to research, many participants mentioned the convenience and their frequent usage of product rankings in their purchase decisions. Thus, we included a weekly-updated product ranking in our home page. We also included daily skincare advice and product recommendations.</li>
+                        <li>By going back to research, many participants mentioned the convenience and their frequent usage of product rankings in their purchase decisions. Thus, we included a weekly-updated product ranking in our homepage. We also included daily skincare advice and product recommendations.</li>
                     </ul>
 
                     <ul class="casestudy-ul"><span>Profile Page</span>
-                        <li>The profile page includes a routine list where users are able to create and customize their own routines, a bookmark feature where users are able to save undecided products to, a skin condition section where users are able to edit their skin concerns at any time, and a product compatibility page that users are able to view if their routine consists of an incompatible concern.</li>
+                        <li>The profile page includes a routine list where users are able to create and customize their own routines, a bookmark feature where users are able to save undecided products to, a skin condition section where users are able to edit their skin concerns at any time, and a product compatibility page that alerts users if their routine contains incompatible products.</li>
                     </ul>
 
                     <ul class="casestudy-ul"><span>Explore Page</span>
                         <li>We included an explore section and a search feature for users to look up specific products. For the product information page, we included a review section and an ingredient list with categorized ingredients from good to poor based on the product’s compatibility with the user’s skin type.</li>
                     </ul>
 
-                    <p>For usability testing, we wanted to analyze user pain points and evaluate the effectiveness of our delivery of the personalized and educational aspect of skincare without overwhelming users. We conducted two usability testing with the same 8 users in each round, ranging from undergraduate college students, graduates, and working professionals, ages 19–25.</p>
+                    <p>For usability testing, we wanted to analyze user pain points and evaluate the effectiveness of our delivery of the personalized and educational aspect of skincare without overwhelming users. We conducted two rounds of usability testing with the same eight users, ranging from undergraduate college students, graduates, and working professionals, ages 19–25.</p>
 
                     <ul class="casestudy-ul"><span>Usability Testing Tasks</span>
                         <li>Complete onboarding quiz</li>
@@ -225,7 +225,7 @@
                     <h3>A/B Testing</h3>
                     <p>We conducted A/B testing to determine user preferences on the following visual designs and prototypes:</p>
                     <img src="images/ab1.jpg" alt="a/b testing">
-                    <p>For the weekly product ranking in the home page, we tested the first three versions. Users favored Version C for its minimalistic design and straightforward information. We finalized with Version D by adding categories for different skin types.</p>
+                    <p>For the weekly product ranking in the homepage, we tested the first three versions. Users favored Version C for its minimalistic design and straightforward information. We finalized with Version D by adding categories for different skin types.</p>
                     <img src="images/ab2.jpg" alt="a/b testing">
                     <p>For the deleting product prototype in “My Routines” and “My Bookmarks” under the profile page, users preferred the swipe-to-delete design in Version B for being more minimalistic since Version A consists of too many destructive buttons in one page.</p>
                     <img src="images/ab3.jpg" alt="a/b testing">
@@ -294,7 +294,7 @@
                 </section>
 
                 <section id="next">
-                    <h2>Next Step</h2>
+                    <h2>Next Steps</h2>
                     <p>As for next steps, we want to explore an in-app skin scanner to automatically observe skin type and condition, as well as other features mentioned during our user interview process, like incorporating a Q&A feature and expanding upon our community review system to make them more insightful and trustworthy.</p>
                 </section>
 
@@ -328,7 +328,7 @@
             </div>
         </div>
         <div>
-            <p>© 2025 Joanne Cai · Designed & Built by Joanne Cai</p>
+            <p>© 2026 Joanne Cai · Designed & Built by Joanne Cai</p>
         </div>
     </footer>
     
