--- a/uiux.html
+++ b/uiux.html
@@ -54,7 +54,7 @@
                 </a>
                 <div class="work-details">
                     <h3>DI Circle</h3>
-                    <h4>Mobile Design - UIUX Project Management</h4>
+                    <h4>UI/UX Project Management</h4>
                     <section class="cta">
                         <a href="dicircle.html">
                             <span>View my contribution</span> <i class="fa-solid fa-arrow-right"></i>
@@ -68,7 +68,7 @@
                 </a>
                 <div class="work-details">
                     <h3>Skinfo</h3>
-                    <h4>Mobile Design - UIUX</h4>
+                    <h4>UI/UX Design</h4>
                     <section class="cta">
                         <a href="skinfo.html">
                             <span>Read case study</span> <i class="fa-solid fa-arrow-right"></i>
@@ -83,7 +83,7 @@
                 </a>
                 <div class="work-details">
                     <h3>ForeU</h3>
-                    <h4>Mobile Design - UIUX</h4>
+                    <h4>UI/UX Design</h4>
                     <section class="cta">
                         <a href="foreu.html">
                             <span>Read case study</span> <i class="fa-solid fa-arrow-right"></i>
@@ -98,7 +98,7 @@
                 </a>
                 <div class="work-details">
                     <h3>FoodTown</h3>
-                    <h4>Mobile Design - UIUX</h4>
+                    <h4>UI/UX Design</h4>
                     <section class="cta">
                         <a href="foodtown.html">
                             <span>Read case study</span> <i class="fa-solid fa-arrow-right"></i>
@@ -113,7 +113,7 @@
                 </a>
                 <div class="work-details">
                     <h3>Canvas Redesign</h3>
-                    <h4>Mobile Design - UIUX</h4>
+                    <h4>UI/UX Redesign</h4>
                     <section class="cta">
                         <a href="canvas.html">
                             <span>Read case study</span> <i class="fa-solid fa-arrow-right"></i>
@@ -143,7 +143,7 @@
             </div>
         </div>
         <div>
-            <p>© 2025 Joanne Cai · Designed & Built by Joanne Cai</p>
+            <p>© 2026 Joanne Cai · Designed & Built by Joanne Cai</p>
         </div>
     </footer>
     
