--- a/dicircle.html
+++ b/dicircle.html
@@ -26,7 +26,7 @@
     <script src="script.js" defer></script>
     
 </head>
-<body>
+<body class="casestudy-body">
     <header>
         <a href="index.html"><img id="logo" src="images/logo.svg" alt="logo"></a>
         <nav>
@@ -62,7 +62,7 @@
                 <div class="projectinfo">
                     <ul>
                         <li><h4>Timeline</h4></li>
-                        <li>Nov-Dec 2025</li>
+                        <li>Oct-Dec 2025</li>
                     </ul>
 
                     <ul>
@@ -87,14 +87,14 @@
 
                 <section id="role">
                     <h2>My Role</h2>
-                    <p>As Project Manager, I guided the team through the full design sprint, ensuring research-driven, user-centered design decisions while maintaining project momentum. I aligned the team on scope, goals, and key milestones, managed timelines, delegated tasks, and kept thorough documentation of decisions and progress. I facilitated discussions to resolve design challenges, provided constructive feedback, and mentored team members through regular 1:1s. I also acted as the primary liaison between the team, industry mentors, and Cohort Program Managers, ensuring that feedback and guidance were effectively integrated into the project.</p>
+                    <p>As Project Manager, I guided the team through the full design sprint, ensuring research-driven, user-centered design decisions while maintaining project momentum. I aligned the team on scope, goals, and key milestones, managed timelines, delegated tasks, and kept thorough documentation of decisions and progress. I facilitated discussions to resolve design challenges, provided constructive feedback, and mentored team members through regular one-on-one meetings. I also acted as the primary liaison between the team, industry mentors, and Cohort Program Managers, ensuring that feedback and guidance were effectively integrated into the project.</p>
 
-                    <p>I helped maintain focus on user needs and research insights, supporting the team in prioritizing features and defining clear deliverables. Through mentorship and feedback, I fostered a collaborative and supportive team culture while guiding critical design and research decisions. My leadership ensured that the team stayed on track, coordinated efficiently with mentors, and delivered a polished, research-informed prototype by the end of the sprint.</p>
+                    <p>I helped maintain focus on user needs and research insights, supporting the team in prioritizing features and defining clear deliverables. Through mentorship and feedback, I fostered a collaborative and supportive team culture while guiding critical design and research decisions. My leadership ensured that the team stayed on track and delivered a polished, research-informed prototype by the end of the sprint.</p>
                 </section>
 
                 <section id="outcome">
                     <h2>Impact & Outcomes</h2>
-                    <p>Under my guidance, the team successfully created a platform that supports authentic engagement, reduces intimidation in networking, and strengthens community connections. The project was awarded with the <em><strong>Audience Choice Award</strong></em>, highlighting the effectiveness of the team’s collaborative process and design outcomes.</p>
+                    <p>Under my guidance, the team successfully created a platform that supports authentic engagement, reduces intimidation in networking, and strengthens community connections. The project was awarded the <em><strong>Audience Choice Award</strong></em>, highlighting the effectiveness of the team’s collaborative process and design outcomes.</p>
                 </section>
 
                 <section class="cta">
@@ -136,7 +136,7 @@
             </div>
         </div>
         <div>
-            <p>© 2025 Joanne Cai · Designed & Built by Joanne Cai</p>
+            <p>© 2026 Joanne Cai · Designed & Built by Joanne Cai</p>
         </div>
     </footer>
     
