--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <!-- Meta tag for mobile support -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- GSAP CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"></script>
+
     <!-- My Script -->
     <script src="script.js" defer></script>
 </head>
@@ -46,9 +49,20 @@
 
     <main id="main">
         <div id="hero-container">
-            <h1 id="hero-tagline">Design is a process <br>of constant <strong><em>discovery</em></strong>.</h1>
+            <h1 id="hero-tagline" class=".fade-in">
+                <span class="line">Design is a process</span><br>
+                <span class="line">of constant <strong><em>discovery</em></strong></span>
+                <!-- Design is a process <br>of constant <strong><em>discovery</em></strong>. -->
+            </h1>
+            <div id="hero-graphics">
+                <div class="butterfly-side1"></div>
+                <div class="butterfly-side2"></div>
+                <img id="nini" src="images/nini.png" alt="illustration of my dog, nini">
+            </div>
+            
         </div>
         <h2>Featured Work</h2>
+        <p class="description">Designing experiences that balance usability and impact, featuring UI/UX and interactive web projects.</p>
         <section id="work">
             <div class="work-section">
                 <a href="dicircle.html">
@@ -56,7 +70,7 @@
                 </a>
                 <div class="work-details">
                     <h3>DI Circle</h3>
-                    <h4>Mobile Design - UIUX Project Management</h4>
+                    <h4>UI/UX Project Management</h4>
                     <section class="cta">
                         <a href="dicircle.html">
                             <span>View my contribution</span> <i class="fa-solid fa-arrow-right"></i>
@@ -70,7 +84,7 @@
                 </a>
                 <div class="work-details">
                     <h3>Skinfo</h3>
-                    <h4>Mobile Design - UIUX</h4>
+                    <h4>UI/UX Design</h4>
                     <section class="cta">
                         <a href="skinfo.html">
                             <span>Read case study</span> <i class="fa-solid fa-arrow-right"></i>
@@ -85,7 +99,7 @@
                 </a>
                 <div class="work-details">
                     <h3>ForeU</h3>
-                    <h4>Mobile Design - UIUX</h4>
+                    <h4>UI/UX Design</h4>
                     <section class="cta">
                         <a href="foreu.html">
                             <span>Read case study</span> <i class="fa-solid fa-arrow-right"></i>
@@ -130,7 +144,7 @@
             </div>
         </div>
         <div>
-            <p>© 2025 Joanne Cai · Designed & Built by Joanne Cai</p>
+            <p>© 2026 Joanne Cai · Designed & Built by Joanne Cai</p>
         </div>
     </footer>
     
